Fix profile-dropdown overlap bug

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,12 +15,13 @@ body, #root {
 }
 
 main {
-    position: relative;
+    position: absolute;
     top: 160px;
     bottom: 0;
     width: 100%;
     height: 83%;
     overflow: auto;
+    z-index: 0;
 }
 
 h1 {
